--- a/package/boot/uboot-rockchip/Makefile
+++ b/package/boot/uboot-rockchip/Makefile
@@ -93,6 +93,17 @@ define U-Boot/doornet2-rk3399
   USE_RKBIN:=1
 endef
 
+define U-Boot/fastrhino-r66s-rk3568
+  BUILD_SUBTARGET:=armv8
+  NAME:=FastRhino R66S
+  BUILD_DEVICES:= \
+    fastrhino-r66s
+  DEPENDS:=+PACKAGE_u-boot-r66s-rk3568:arm-trusted-firmware-rk3568
+  PKG_BUILD_DEPENDS:=arm-trusted-firmware-rockchip-vendor
+  ATF:=rk3568_bl31_v1.34.elf
+  DDR:=rk3568_ddr_1560MHz_v1.13.bin
+endef
+
 define U-Boot/guangmiao-g4c-rk3399
   BUILD_SUBTARGET:=armv8
   NAME:=GuangMiao G4C
@@ -159,6 +170,7 @@ endef
 
 UBOOT_TARGETS := \
   doornet2-rk3399 \
+  fastrhino-r66s-rk3568 \
   guangmiao-g4c-rk3399 \
   nanopi-r4s-rk3399 \
   nanopi-r4se-rk3399 \
